@@ -9,7 +9,7 @@ WriteMakefile(
     'PREREQ_PM'    => {
         'Carp'                => 0,
         'ExtUtils::MakeMaker' => 0,
-        'File::Finder'        => 0,
+        'File::Find'          => 0,
         'File::Slurp'         => 0,
         'Test::Builder'       => 0,
         'Test::More'          => 0,
