@@ -1,5 +1,7 @@
 Changes
 
+     - Use File::Find instead of File::Finder
+
 0.04 - Thu 12 Mar 2009 22:51:51 GMT
      - Added copyright info
 
